; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_sa1100_assabet.c_pcmcia_assabet_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pcmcia/extr_sa1100_assabet.c_pcmcia_assabet_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@ENODEV = common dso_local global i32 0, align 4
@assabet_pcmcia_ops = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pcmcia_assabet_init(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %2, align 8
  %4 = load i32, i32* @ENODEV, align 4
  %5 = sub nsw i32 0, %4
  store i32 %5, i32* %3, align 4
  %6 = call i64 (...) @machine_is_assabet()
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = call i32 (...) @machine_has_neponset()
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %8
  %12 = load %struct.device*, %struct.device** %2, align 8
  %13 = call i32 @sa11xx_drv_pcmcia_probe(%struct.device* %12, i32* @assabet_pcmcia_ops, i32 1, i32 1)
  store i32 %13, i32* %3, align 4
  br label %14

14:                                               ; preds = %11, %8, %1
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i64 @machine_is_assabet(...) #1

declare dso_local i32 @machine_has_neponset(...) #1

declare dso_local i32 @sa11xx_drv_pcmcia_probe(%struct.device*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
